--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["xyz <jack@flnpb.com>"]
 python = "^3.9"
 bitcoin = "^1.1.42"
 blockchain = "^1.4.4"
+python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
